# whisper-jax-infer

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml
